--- a/src/App_old.css
+++ b/src/App_old.css
@@ -5,9 +5,9 @@
   --sidebar-bg: #000000;
   --background: #F9FAFB;
   --panel-bg: #ffffff;
-  --text-primary: #6e788d;
+  --text-primary: #e14212;
   --text-secondary: #000000;
-  --accent: #1e3460; /* Índigo vibrante */
+  --accent: #ffffff; /* Índigo vibrante */
   --accent-hover: #2b364a;
   --accent-light: #0c3ddc;
   --border-color: #ffffff;
